# gslides-api

./: .coderabbit.yaml  .gitignore  .mcp.json  CLAUDE.md  pyproject.toml  reconstructed_output.json  requirements.txt
docs/: MCP_SERVER.md
gslides_api/: __init__.py  client.py  credentials.py  domain.py  element.py  execute.py  markdown.py  page.py  page_all.py  presentation.py  requests.py  response.py  table.py  table_cell.py  text.py  utils.py
gslides_templater/: __init__.py  auth.py  markdown_processor.py
playground/: check_import.py  copy_check.py  duplicate.py  gigs_presentation.json  markdown_games.py  slide_manipulation.py  table_games.py  thumbnails.py
sketches/: README.md  __init__.py  auth.py  core.py
tests/: test_absolute_size_position.py  test_affine_transform.py  test_agnostic_converters.py  test_agnostic_presentation.py  test_agnostic_text.py  test_api_round_trip.py  test_bold_trailing_space_bug.py  test_client_batching.py  test_color_api_format.py  test_color_format_comparison.py  test_discriminated_union.py  test_element_from_markdown.py  test_element_kind.py  test_element_markdown_conversion.py  test_element_new_methods.py  test_element_placeholder.py  test_image_data.py  test_image_properties.py  test_ir_to_markdown.py  test_ir_to_text_elements.py  test_itemlist_flattening.py  test_layout_reference.py  test_library.py  test_markdown_contains_table.py  test_markdown_domain.py  test_markdown_features.py  test_markdown_from_markdown.py  test_markdown_integration.py  test_markdown_reconstruction.py  test_markdown_table_getset.py  test_mock_client.py  (+19 more)
(+97 files in other folders)
